--- a/.gitignore
+++ b/.gitignore
@@ -1,80 +1,66 @@
- ############################
- # Python / Virtual Env
- ############################
- .venv/
- venv/
- env/
- ENV/
+# ===============================
+# Python build / packaging
+# ===============================
+__pycache__/
+*.py[cod]
+*$py.class
 
- __pycache__/
- *.py[cod]
- *$py.class
+build/
+dist/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
 
- ############################
- # Build / Packaging
- ############################
- build/
- dist/
- *.egg-info/
- .eggs/
+# setuptools / packaging metadata
+**/*.egg-info/
+**/*.egg
+MANIFEST
 
- ############################
- # PyCharm / IDE
- ############################
- .idea/
- .vscode/
- *.iml
+# ===============================
+# Virtual environments
+# ===============================
+.venv/
+venv/
+ENV/
+env/
 
- ############################
- # OS
- ############################
- .DS_Store
- Thumbs.db
+# ===============================
+# Test / coverage
+# ===============================
+.pytest_cache/
+.coverage
+.coverage.*
+htmlcov/
+.tox/
+.nox/
 
- ############################
- # Logs
- ############################
- *.log
- logs/
- log/
+# ===============================
+# IDE / Editor
+# ===============================
+.vscode/
+.idea/
+*.swp
+*.swo
+*.bak
 
- ############################
- # Environment variables
- ############################
- .env
- .env.*
- !.env.example
+# ===============================
+# OS
+# ===============================
+.DS_Store
+Thumbs.db
 
- ############################
- # Database
- ############################
- *.sqlite3
- *.db
-
- ############################
- # Test / Coverage
- ############################
- .pytest_cache/
- .coverage
- htmlcov/
-
- ############################
- # FastAPI / Uvicorn
- ############################
- *.pid
-
- ############################
- # MySQL dumps / local data
- ############################
- *.sql
- data/
-
- ############################
- # Poetry / pip artifacts
- ############################
- pip-wheel-metadata/
-
- ############################
- # Misc
- ############################
- .cache/
+# ===============================
+# Logs / temp
+# ===============================
+*.log
+*.tmp
+*.temp
